--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,8 +1,8 @@
 .footer{
     display: flex;
-    margin: 50px 170px;
+    margin: 50px 120px;
     flex-direction: column;
-    gap: 30px;
+    gap: 30px ;
 }
 .ftop{
   display:flex ;  
@@ -10,8 +10,11 @@
 
 }
 .footer-top-left p{
-    font-size: 20px;
+    font-size: 16   px;
     max-width: 400px;
+}
+.footer-top-left img{
+    width: 150px;
 }
 
 .footer-top-right{
@@ -23,10 +26,10 @@
 .footer-email-input{
     display: flex;
     gap: 30px;
-    padding: 20px 30px;
+    padding: 20px 20px;
     border-radius: 50px;
     background: #32323B;
-    padding-right: 80px;
+    padding-right: 50px;
 
 }
 .footer-email-input input{
@@ -39,7 +42,7 @@
 }
 .subscribe{
     font-size: 20px;
-    padding: 22px 50px;
+    padding: 22px 30px;
     border-radius:50px ;
     background:linear-gradient(267deg, #da7c25 0.36%, #b923e1 102.06%)  ;
     cursor: pointer;
